# minecraft-clone

./: CMakeLists.txt  makefile
cmake/: handle_glad.cmake  handle_glfw.cmake  handle_glm.cmake
src/: main.cpp
